; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_ssl.c_pem_password_callback.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_ssl.c_pem_password_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@passbuf = common dso_local global %struct.TYPE_3__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pem_password_callback(i8* %0, i32 %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  store i8* %0, i8** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %12, label %21

12:                                               ; preds = %4
  %13 = call i32 @pem_password_setup(i32* null)
  %14 = load i8*, i8** %6, align 8
  %15 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @passbuf, i32 0, i32 0), align 4
  %16 = load i32, i32* %7, align 4
  %17 = call i32 @strncpynt(i8* %14, i32 %15, i32 %16)
  %18 = call i32 @purge_user_pass(%struct.TYPE_3__* @passbuf, i32 0)
  %19 = load i8*, i8** %6, align 8
  %20 = call i32 @strlen(i8* %19)
  store i32 %20, i32* %5, align 4
  br label %22

21:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %22

22:                                               ; preds = %21, %12
  %23 = load i32, i32* %5, align 4
  ret i32 %23
}

declare dso_local i32 @pem_password_setup(i32*) #1

declare dso_local i32 @strncpynt(i8*, i32, i32) #1

declare dso_local i32 @purge_user_pass(%struct.TYPE_3__*, i32) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
